bugfix: remove gap

--- a/react_one/src/component/device.scss
+++ b/react_one/src/component/device.scss
@@ -13,6 +13,7 @@
   background-position: center;
 }
 .screen {
+  position: relative;
   min-width: 480px;
   min-height: 272px;
   width: 80vw; /* 480px */
@@ -22,10 +23,11 @@
   box-shadow: 4px 4px 10px black;
 }
 .screen > .back_stream_top {
-  width: 100%;
-  height: 100%;
+  position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
   opacity: 0.50;
   border-radius: 5rem;
   background-image: url(../resource/stream_top.svg);
@@ -34,10 +36,11 @@
   animation: animate_stream 20s linear infinite alternate; /* cubic-bezier(.445, .05, .55, .95) easeInOutSine */
 }
 .screen > .back_stream_top > .back_stream_bottom {
-  width: 100%;
-  height: 100%;
+  position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
   opacity: 0.25;
   border-radius: 5rem;
   background-image: url(../resource/stream_bottom.svg);
